# hwbc

./: README.md
hmc-InvDyn/src/Model/: Contact.h  ContactManager.cpp  ContactManager.h  PointContact.cpp  PointContact.h
hmc-InvDyn/test/: CMakeLists.txt  test_contact_placing.cpp  test_contact_placing.sh.in
hmc-tmp/: BalanceControllerCapturePoint.cpp
mc_rtc-old/: QPSolver.cpp  QPSolver.h
mcms-old/: AdmittanceTask.cpp  AdmittanceTask.h  AdmittanceTaskBase.cpp  AdmittanceTaskBase.h  MultiContactMotionSolver.h  NullSpaceAdmittanceTask.cpp  NullSpaceAdmittanceTask.h
mcms-old/MultiContactMotionSolver/: ContactConstraint-temp.cpp  ContactConstraint-temp.h  MultiContactMotionSolver.cpp  PoseTask.cpp  PoseTask.h  ZMPWithForceDistributionTask.cpp  ZMPWithForceDistributionTask.h
mcms-old/MultiContactStateManagerPlugins/: MultiContactStateManagerMCMSPlugins.conf.in  PrimitiveComxyPz.cpp  PrimitiveComxyPz.h  PrimitiveComxyPzLoader.cpp  PrimitiveComxyPzLoader.h  PrimitiveComxyPzLoaderPlugin.cpp  PrimitiveContactManager.cpp  PrimitiveContactManager.h  PrimitiveContactManagerLoader.cpp  PrimitiveContactManagerLoader.h  PrimitiveContactManagerLoaderPlugin.cpp  PrimitiveEndEffectorPose.cpp  PrimitiveEndEffectorPose.h  PrimitiveEndEffectorPoseLoader.cpp  PrimitiveEndEffectorPoseLoader.h  PrimitiveEndEffectorPoseLoaderPlugin.cpp
